# name_match_latest

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  adaptive-ultra-performance-plan.md  deny.toml  docker-compose.yml  experimental-gpu-assisted-matching-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  tauri-build.yml
docs/: adaptive-ultra-benchmark-evidence.md  codebase-performance-audit-goal.md  codebase-performance-audit-report.md  csv-to-database-import-plan.md  deep-codebase-audit-goal.md  deep-codebase-audit-prompt.md  deep-codebase-audit-report.md  deep-match-ux-export-release-fixes-plan.md  feature-roadmap-plan.md  gpu_fuzzy_matching_speedup_final_plan.md  gpu_fuzzy_matching_speedup_plan.md  installation.md  lossless-gpu-fuzzy-gate-cpu-final-classifier-plan.md  matching_algorithms.md  million-row-scale-plan.md  mysql-benchmark-fixture.md  name_matcher_performance_remediation_plan.md  optimization-sweep-plan.md  performance-remediation-swarm-plan.md  performance.md  post-audit-remediation-plan.md  self_hosted_runner_windows_cuda.md  tauri-development.md  tauri-enhancements-plan.md  tauri-migration-plan.md  two-pool-db-streaming-design.md  usage_guide.md
docs/adaptive-ultra-benchmark-json/: parity-duplicate-heavy-gpu.json  parity-large-gpu.json  parity-medium-gpu.json  parity-messy-gpu.json  parity-small-gpu.json  perf-duplicate-heavy-cpu.json  perf-duplicate-heavy-gpu.json  perf-large-cpu.json  perf-large-gpu.json  perf-medium-cpu.json  perf-medium-gpu.json
scripts/perf/: Capture-MysqlConfig.ps1  Compare-Benchmarks.ps1  Compare-Recall.ps1  Generate-Datasets.ps1  README.md  Run-Benchmarks.ps1
scripts/windows/: Build-Release-Gpu.ps1  Build-Release-Gui.ps1  Build-Tauri-Cpu.ps1  Build-Tauri-Gpu.ps1  Run-NameMatcher.ps1  Smoke-Docker-Mysql.ps1
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  normalize.rs  perf.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: error.rs  import_jobs.rs  main.rs  state.rs
src-tauri/src/commands/: database.rs  files.rs  import.rs  matching.rs  mod.rs  results.rs  system.rs
src/benchmarking/: mod.rs
src/cli/: args.rs  clap_parser.rs  flags.rs  mod.rs
src/db/: connection.rs  mod.rs  schema.rs
src/engine/: db_pipeline.rs  file_checkpointer.rs  legacy_adapters.rs  mod.rs  person_pipeline.rs
src/export/: csv_export.rs  mod.rs  xlsx_export.rs
src/import/: mod.rs  staging.rs
src/loaders/: csv_loader.rs  excel_loader.rs  mod.rs
src/matching/: advanced_matcher.rs  birthdate_matcher.rs  cascade.rs  gpu_config.rs  helpers.rs  mod.rs
src/matching/algorithms/: mod.rs
src/matching/gpu/: batch.rs  cache.rs  context.rs  dynamic_tuner.rs  fuzzy_run.rs  kernels.rs  mod.rs  mode.rs  resident.rs
src/optimization/: mod.rs  profile_calculator.rs  system_profiler.rs
src/orchestrator/: mod.rs  summary.rs
src/run_service/: dto.rs  mod.rs  performance.rs  scale.rs  sink.rs  store.rs
src/util/: checkpoint.rs  envfile.rs  mod.rs  partition.rs
tests/: csv_e2e.rs  csv_import_mysql.rs  db_cross_session_smoke.rs  excel_e2e.rs
ui/: .editorconfig  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  index.css  test-setup.ts
ui/src/__tests__/: ConnectTab.test.tsx  ErrorBoundary.test.tsx  compareGuard.test.ts  configStore.test.ts  resultsStore.test.ts  reviewBand.test.ts  runScalePolicy.test.ts  zod-schemas.test.ts
ui/src/app/: ErrorBoundary.tsx  EventBridge.tsx  StatusRail.tsx  TabBar.tsx  shortcuts.tsx
ui/src/features/configure/: CascadePicker.tsx  ConfigureCards.tsx  ConfigureTab.tsx
ui/src/features/connect/: ColumnMapper.tsx  ConnectTab.tsx  ConnectionCard.tsx  CsvImportWizard.tsx  DataSourceSwitcher.tsx  FileSourceCard.tsx  SchemaQuality.tsx  csvImportStore.ts  persistence.ts
ui/src/features/results/: DiffView.tsx  ExplanationPanel.tsx  MatchRow.tsx  ResultsTab.tsx  ResultsTable.tsx  ReviewActions.tsx  ReviewToolbar.tsx
ui/src/features/run/: RunTab.tsx
ui/src/shared/: runScalePolicy.ts
ui/src/shared/components/: ToastLayer.tsx  primitives.tsx
ui/src/shared/hooks/: index.ts
ui/src/shared/lib/: columnMapping.test.ts  columnMapping.ts  format.test.ts  format.ts  reviewBand.ts
ui/src/shared/stores/: configStore.ts  connectionStore.ts  errorStore.ts  jobStore.ts  resultsStore.ts  toastStore.ts
ui/src/shared/tauri/: commands.ts  events.ts  types.ts  zod-schemas.ts
