[package]
name = "name_matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3.1"
cudarc = { version = "0.17.3", features = ["nvrtc"], optional = true }
eframe = "0.32.3"
egui = "0.32.3"
env_logger = "0.11.8"
log = "0.4.28"
rayon = "1.11.0"
rfd = "0.15.4"
rphonetic = "3.0.4"
rust_xlsxwriter = "0.90.1"
serde = { version = "1.0.225", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
strsim = "0.11.1"
sysinfo = "0.37.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1.24"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[features]
gpu = ["dep:cudarc", "cudarc/cuda-version-from-build-system"]
new_cli = []
new_engine = []

[profile.release]
# Performance-oriented defaults (no algorithm changes).
lto = "thin"
codegen-units = 1
strip = "symbols"
