[package]
name = "name_matcher"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "name_matcher"
path = "src/lib.rs"

# Default CLI binary (no GUI deps required)
[[bin]]
name = "name_matcher"
path = "src/main.rs"

# Legacy egui GUI binary — gated behind the `gui` feature so CPU CLI
# builds, the Tauri shell, and CI lanes do not pull egui/eframe/rfd unless
# explicitly requested.
[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

# GPU audit utility — only meaningful with CUDA available.
[[bin]]
name = "gpu_audit"
path = "src/bin/gpu_audit.rs"
required-features = ["gpu"]

# Standalone CUDA-only smoke: probes the runtime, prints VRAM, exits 0/1.
# Useful for clean-machine release inspection without needing MySQL.
[[bin]]
name = "cuda_probe"
path = "src/bin/cuda_probe.rs"
required-features = ["gpu"]

# Seeding helper for development/test fixtures.
[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
anyhow = "1.0.99"
calamine = "0.26"
chrono = { version = "0.4.42", features = ["serde"] }
chardetng = "0.1.17"
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3.1"
cudarc = { version = "0.17.3", features = ["nvrtc"], optional = true }
eframe = { version = "0.32.3", optional = true }
egui = { version = "0.32.3", optional = true }
env_logger = "0.11.8"
encoding_rs = "0.8.35"
log = "0.4.28"
parking_lot = "0.12.5"
rayon = "1.11.0"
rfd = { version = "0.15.4", optional = true }
rphonetic = "3.0.4"
rust_xlsxwriter = "0.90.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
strsim = "0.11.1"
sysinfo = "0.37.0"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1.24"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[features]
default = []
gpu = ["dep:cudarc", "cudarc/cuda-version-from-build-system"]
gui = ["dep:eframe", "dep:egui", "dep:rfd"]
new_cli = []
new_engine = []

[profile.release]
# Performance-oriented defaults (no algorithm changes).
lto = "thin"
codegen-units = 1
strip = "symbols"
