[package]
name = "name-matcher-tauri"
version = "0.1.0"
description = "Tauri v2 desktop shell for the name_matcher engine"
edition = "2024"
publish = false

# Tauri v2 desktop-only build: main.rs is the entry point. We deliberately
# omit a [lib] section since we are not targeting mobile (which requires the
# `cdylib` library form for the host harness).

[[bin]]
name = "name-matcher-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri v2 shell.
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2.4.1"

# JSON / async runtime / error wiring.
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Concurrency / cancellation.
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database — re-using the engine pool type from the path dep below.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Engine path-dep. CPU-only by default; GPU is forwarded through the `gpu`
# feature below.
name_matcher = { path = "..", default-features = false }

# System diagnostics.
sysinfo = "0.37"

# Result store + export helpers (writers used directly by `export_results`).
csv = "1.3"
rust_xlsxwriter = "0.90"

# Rayon — re-initialised globally in main() with reduced thread count so the
# engine has CPU left over for Tauri / Tokio.
rayon = "1.11"

[features]
default = ["custom-protocol"]
# Recommended Tauri v2 distribution feature.
custom-protocol = ["tauri/custom-protocol"]
# Forward to engine GPU support. Requires CUDA Toolkit on PATH at build time.
gpu = ["name_matcher/gpu"]
